deploy/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: ploverdb
  namespace: rtx
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ploverdb
  type: NodePort
