deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ploverdb
  namespace: rtx
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Name=ARS_ALB_TAG_VALUE,Environment=ENVIRONMENT_TAG_VALUE
    alb.ingress.kubernetes.io/security-groups: ARS_ALB_SG_VALUE
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-2-Ext-2018-06
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/success-codes: '405'
    alb.ingress.kubernetes.io/healthcheck-path: '/query/'
spec:
  rules:
    - host: PDB_HOSTNAME_VALUE
      http:
        paths:
        - path: /*
          backend:
            serviceName: ssl-redirect
            servicePort: use-annotation
        - backend:
            serviceName: ploverdb
            servicePort: 80
          path: /*
